--- a/src/app/custom/input-custom/input-custom.component.html
+++ b/src/app/custom/input-custom/input-custom.component.html
@@ -1,4 +1,4 @@
-<nz-form-label [nzSm]="6" [nzXs]="24" [nzRequired]="REQUIRED">{{LABEL}}</nz-form-label>
+<nz-form-label [nzSpan]="24" nz-col [nzRequired]="REQUIRED">{{LABEL}}</nz-form-label>
 
 <input nz-input [class]="CLASSNAME" [nzStatus]="!VALID ? 'error' : ''" [placeholder]="PLACEHOLDER" [(ngModel)]="VALUE"
     [type]="TYPE" [readonly]="DISABLED" (keyup)="changeValueInput()" />
