--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,31 @@
-<nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+<footer class="footer">
+    <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+    </div>
+    <ul class="social-icon">
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <!-- <ion-icon name="logo-facebook"></ion-icon> -->
+            </a></li>
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <!-- <ion-icon name="logo-twitter"></ion-icon> -->
+            </a></li>
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <!-- <ion-icon name="logo-linkedin"></ion-icon> -->
+            </a></li>
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+                <!-- <ion-icon name="logo-instagram"></ion-icon> -->
+            </a></li>
+    </ul>
+    <ul class="menu">
+        <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+
+    </ul>
+    <p>&copy;2021 Nadine Coelho | All Rights Reserved</p>
+</footer>
