--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -1,133 +1,209 @@
+/* Fontawesome */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 
-::selection{
-    color: #ffffff;
-    background-color: #31285C;
-   }
-   
-   *{
-    padding:0;
+body {
+    font-family: 'Arial', sans-serif;
     margin: 0;
-    font-family: 'Outfit', sans-serif;
+    padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
-   }
-   
-   a{
-    color: #31285C;
-   }
-   
-   
-   
-   body{
+}
+
+.container {
+    display: flex;
+    height: 100vh;
+    align-items: stretch;
+}
+
+.left-section {
+    background: url('https://img.freepik.com/premium-vector/man-freelancer-sits-table-cafe-working-laptop-remote-worker-drinking-beverage-coworking-space-workplace-cafeteria-restaurant_575670-1291.jpg?size=626&ext=jpg&ga=GA1.1.1546980028.1702771200&semt=ais') no-repeat center center;
+    display: none;
+}
+
+.right-section {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-container {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgb(10 75 90);
     width: 100%;
-    min-height: 100vh;
+    max-width: 450px;
+}
+
+.login-form h2 {
+    color: #ffb144;
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.login-title i {
+    margin-right: 10px;
+    color: #027186;
+}
+
+.form-control {
+    position: relative;
+    margin-bottom: 30px;
+    border: none;
+}
+
+.form-control i {
+    position: absolute;
+    left: 15px;
+    top: 14px;
+    color: #32495e;
+}
+
+.form-control input {
+    width: 100%;
+    max-width: 95%;
+    padding: 12px 0 12px 37px;
+    border: 2px solid #00569f1c;
+    background-color: rgb(232, 232, 232);
+    color: rgb(50, 73, 94);
+    border-radius: 6px;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.form-control input:focus {
+    outline: none;
+    border: 2px solid #ffd8a1;
+}
+
+.form-control input:invalid:not(:focus):not(:placeholder-shown) {
+    border: 2px solid #ff3860;
+}
+
+.remember-me {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.remember-me .checkbox-custom {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    border: 2px solid #027186;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #f7f7f7;
+    transition: background-color 0.3s, border-color 0.3s;
+    background-color: #f7f7f7;
+    transition: background-color 0.3s, border-color 0.3s;
+    pointer-events: none;
+}
+
+.remember-me .checkbox-custom::after {
+    content: '';
+    position: absolute;
+    left: 5px;
+    top: 1px;
+    width: 6px;
+    height: 11px;
+    border: solid #027186;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    display: none;
+}
+
+.remember-me label {
+    color: #333;
+    font-size: 0.95em;
+    cursor: pointer;
+}
+
+.remember-me input[type="checkbox"] {
+    display: none;
+}
+
+.remember-me input[type="checkbox"]:checked+.checkbox-custom::after {
+    display: block;
+}
+
+.remember-me input[type="checkbox"]:checked+.checkbox-custom {
+    background-color: #027186;
+    border-color: #027186;
+}
+
+.social-login {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.social-icon {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    line-height: 40px;
+    text-align: center;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.fab.fa-google {
+    background-color: #DB4437;
+    color: white;
+}
+
+.fab.fa-facebook-f {
+    background-color: #4267B2;
+    color: white;
+}
+
+.fab.fa-twitter {
+    background-color: #1DA1F2;
+    color: white;
+}
+
+.fab.fa-google:hover {
+    background-color: #e57373;
+}
+
+.fab.fa-facebook-f:hover {
+    background-color: #5c7cfa;
+}
+
+.fab.fa-twitter:hover {
+    background-color: #69c0ff;
+}
+
+button {
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-radius: 12px;
+    background-color: #ffaa33;
+    color: white;
+    font-size: 17px;
+    cursor: pointer;
+    transition: background-color 0.3s;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    background-color: #F0F0F0;
-    padding-top: 20px;
-   }
-   
-   .wrapper{
-    width: 320px;
-    min-height:100px;
-    background-color: #FFFFFF;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.05);
-    padding: 30px;
-   }
-   
-   .input-field{
-    width: 100%;
-    height: 45px;
-    border: none;
-    padding: 10px;
-    background-color: #eeeeee;
-    color: gray;
-    outline: none;
-    font-size: 15px;
-    margin-bottom: 20px;
-    transition: .5s;
-    border-radius: 5px;
-   }
-   
-   input:hover{
-   }
-   
-   
-   .heading{
-    color: #3B3663;
-    margin-bottom: 20px;
-   }
-   
-   .heading p{ 
-    color: #AAA8BB;
-   }
-   
-   .heading i{
-    font-size: 30px;
-    color: #4D61FC;
-   } 
-   
-   label{
-    color: #AAA8BB;
-    font-weight: 400;
-   }
-   
-   button{
-    width: 100%;
-    height: 45px;
-    border: none;
-    color: #FFFFFF;
-    background-color: #31285C;
-    border-radius: 5px;
-    font-size: 17px;
-    font-weight: 500;
-    transition: 0.3s;
-   }
-   
-   button:hover{
-    background-color: #31283B;
-   }
-   
-   .row{
-    min-width: 5px;
-    min-height: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    font-size: 15px;
-   }
-   
-   .custom-checkbox{
-    width: 17px;
-    height: 17px;
-    border-radius: 5px;
-    background-color: #eeeeee;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    font-size: 10px;
-    margin-right: 5px;
-   }
-   
-   input[type=checkbox]:checked ~ .custom-checkbox{
-    background-color: #31285C;
-   }
-   
-   input[type=checkbox]:checked ~ .custom-checkbox::before {
-   font-family: "Font Awesome 5 Free";
-     content: "\f00c";
-     display: inline-block;
-     font-weight: 900;
-     color: #ffffff;
-   }
-   
-   footer{
-    text-align: center;
-    margin: 20px;
-   }
-   
-   
+}
+
+button:hover {
+    background-color: #405d7d;
+}
+
+/*Responsive*/
+@media screen and (min-width: 768px) {
+    .left-section {
+        display: block;
+        /* Show the left section on larger screens */
+        flex: 1;
+    }
+}
