--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -69,29 +69,21 @@
         <nz-content>
             <router-outlet></router-outlet>
         </nz-content>
-        <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+        <app-footer></app-footer>
     </nz-layout>
 </nz-layout>
 
 <nz-modal *ngIf="isShownInfo" [(nzVisible)]="isShownInfo" nzTitle="Cập nhật" (nzOnCancel)="handleCancel()"
-    (nzOnOk)="onSubmit()">
+    (nzOnOk)="handleCancel()">
     <ng-container *nzModalContent>
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="12">
-                <nz-form-label [nzSpan]="24">Email</nz-form-label>
-                <input nz-input placeholder="Nhập email" [(ngModel)]="Entity.email" type="text" />
-            </div>
-            <div nz-col [nzSpan]="12">
-                <nz-form-label [nzSpan]="24">Số điện thoại</nz-form-label>
-                <input nz-input placeholder="Nhập sđt" [(ngModel)]="Entity.phone" type="text" />
-            </div>
-            <div nz-col [nzSpan]="12">
                 <nz-form-label [nzSpan]="24">Họ tên</nz-form-label>
-                <input nz-input placeholder="Nhập họ tên" [(ngModel)]="Entity.fullName" type="text" />
+                <input nz-input placeholder="Nhập họ tên" [(ngModel)]="Entity.customer.fullName" type="text" />
             </div>
             <div nz-col [nzSpan]="12">
                 <nz-form-label [nzSpan]="24">Địa chỉ</nz-form-label>
-                <input nz-input placeholder="Nhập địa chỉ" [(ngModel)]="Entity.address" type="text" />
+                <input nz-input placeholder="Nhập địa chỉ" [(ngModel)]="Entity.customer.address" type="text" />
             </div>
         </div>
     </ng-container>
@@ -102,12 +94,17 @@
     <ng-container *nzModalContent>
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="24">
-                <nz-form-label [nzSm]="6" [nzXs]="24">Mật khẩu mới</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24">Mật khẩu hiện tại</nz-form-label>
                 <input nz-input placeholder="Nhập mật khẩu" [(ngModel)]="Entity.oldHashPassword" type="password" />
             </div>
             <div nz-col [nzSpan]="24">
+                <nz-form-label [nzSm]="6" [nzXs]="24">Mật khẩu mới</nz-form-label>
+                <input nz-input placeholder="Nhập mật khẩu" [(ngModel)]="Entity.newHashPassword" type="password" />
+            </div>
+            <div nz-col [nzSpan]="24">
                 <nz-form-label [nzSm]="6" [nzXs]="24">Xác nhận mật khẩu</nz-form-label>
-                <input nz-input placeholder="Nhập sđt" [(ngModel)]="Entity.newHashPassword" type="password" />
+                <input nz-input placeholder="Nhập mật khẩu" [(ngModel)]="Entity.confirmHashPassword"
+                    type="password" />
             </div>
         </div>
     </ng-container>
