--- a/src/app/modules/feature/dashboard/dashboard.component.html
+++ b/src/app/modules/feature/dashboard/dashboard.component.html
@@ -76,3 +76,5 @@
         <div class="col-md-2"></div>
     </div>
 </div>
+
+<app-full-screen-spinner [isLoading]="isLoading"></app-full-screen-spinner>
