--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -1,5 +1,5 @@
 <nz-layout>
-    <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
+    <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null" style="height: 100vh;">
         <a class="logo" nz-row style="cursor: pointer" routerLink="../main/feature/dashboard">
             <div nz-col [nzSpan]="12">
                 <img style="height: 32px;"
@@ -30,34 +30,42 @@
             <li nz-submenu nzTitle="Master Data" nzIcon="file">
                 <ul>
                     <li nz-menu-item>
-                        <a routerLink="category/topic-type">Loại chủ đề</a>
+                        <a [routerLink]="pathRouting.TOPIC_TYPE">Loại chủ đề</a>
                     </li>
                 </ul>
                 <ul>
                     <li nz-menu-item>
-                        <a routerLink="category/topic">Chủ đề</a>
+                        <a [routerLink]="pathRouting.TOPIC">Chủ đề</a>
                     </li>
                 </ul>
-                <ul>
+                <!-- <ul>
                     <li nz-menu-item>
                         <a routerLink="category/favorite-topic">Chủ đề ưa thích</a>
                     </li>
-                </ul>
+                </ul> -->
             </li>
             <li nz-submenu nzTitle="Bài đăng" nzIcon="book">
                 <ul>
                     <li nz-menu-item>
-                        <a routerLink="feature/blog">Quản lý bài đăng</a>
+                        <a [routerLink]="pathRouting.BLOG">Quản lý bài đăng</a>
                     </li>
                 </ul>
             </li>
             <li nz-menu-item>
                 <span nz-icon nzType="user"></span>
-                <span> <a routerLink="feature/role">Quyền</a></span>
+                <span> <a [routerLink]="pathRouting.ROLE">Quyền</a></span>
             </li>
             <li nz-menu-item>
                 <span nz-icon nzType="team"></span>
-                <span> <a routerLink="feature/user">Người dùng</a></span>
+                <span> <a [routerLink]="pathRouting.USER">Người dùng</a></span>
+            </li>
+            <li nz-menu-item>
+                <span nz-icon nzType="book"></span>
+                <span> <a [routerLink]="pathRouting.NOTIFYCATION">Thông báo</a></span>
+            </li>
+            <li nz-menu-item>
+                <span nz-icon nzType="check"></span>
+                <span> <a [routerLink]="pathRouting.SYSTEM_LOG">LOG hệ thống</a></span>
             </li>
         </ul>
     </nz-sider>
@@ -69,7 +77,7 @@
         <nz-content>
             <router-outlet></router-outlet>
         </nz-content>
-        <app-footer></app-footer>
+        <!-- <app-footer></app-footer> -->
     </nz-layout>
 </nz-layout>
 
@@ -103,8 +111,7 @@
             </div>
             <div nz-col [nzSpan]="24">
                 <nz-form-label [nzSm]="6" [nzXs]="24">Xác nhận mật khẩu</nz-form-label>
-                <input nz-input placeholder="Nhập mật khẩu" [(ngModel)]="Entity.confirmHashPassword"
-                    type="password" />
+                <input nz-input placeholder="Nhập mật khẩu" [(ngModel)]="Entity.confirmHashPassword" type="password" />
             </div>
         </div>
     </ng-container>
